--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,6 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
       - name: Install dbt
-        run: pip install dbt-snowflake@1.2.0
+        run: pip install dbt-snowflake==1.2.0
+        
+      - 
