--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,12 +19,18 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
+      - shell: bash
+      - env:
+          SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+          SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+          DBT_TARGET: ${{ secrets.DBT_TARGET }}
+      
       - name: Install dbt
         run: pip install dbt-snowflake==1.2.0
       
