--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install dbt
         run: pip install dbt-snowflake==1.2.0
       
+      - name: debug env vars
+        run: echo $SNOWFLAKE_ACCOUNT $DBT_TARGET
+        
       - name: dbt smoke test
         shell: bash
-        run: dbt --debug debug --profiles-dir=cicd
+        run: dbt --profiles-dir=cicd debug
