--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   test:
-    environment: dbt-env
+    environment: dbt-dev
 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
