--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ jobs:
     env:
       SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
       SNOWFLAKE_ACCOUNT: ${{ vars.SNOWFLAKE_ACCOUNT }}
-      DBT_TARGET: ${{ vars.DBT_TARGET }}
+      TARGET_SCHEMA: ${{ vars.TARGET_SCHEMA }}
     
 
     # Steps represent a sequence of tasks that will be executed as part of the job
